clusters/default/has/bookstack/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-db
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack-db
  template:
    metadata:
      labels:
        app: bookstack-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: mariadb-pvc
