clusters/default/has/bookstack/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
  namespace: home-assistant
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: bookstack-db
