clusters/default/has/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: home-assistant
spec:
  selector:
    app: bookstack
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
